Uniform handling of JPA and DTO entities in standard list/detail views #2788