@@ -7,7 +7,7 @@ import ${module_basePackage}.view.main.MainView;
 import io.jmix.core.LoadContext;
 import io.jmix.flowui.view.*;
 
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 <%if (classComment) {%>
@@ -21,7 +21,15 @@ public class ${viewControllerName} extends StandardListView<${entity.className}>
 
     @Install(to = "${tableDl}", target = Target.DATA_LOADER)
     protected List<${entity.className}> ${tableDl}LoadDelegate(LoadContext<${entity.className}> loadContext) {
-        // Here you can load entities from an external store
-        return Collections.emptyList();
+        // Here you can load entities from an external storage.
+        // Set the loaded entities to the not-new state using EntityStates.setNew(entity, false).
+        return List.of();
+    }
+
+    @Install(to = "${tableId}.remove", subject = "delegate")
+    private void ${tableId}RemoveDelegate(final Collection<${entity.className}> collection) {
+        for (${entity.className} entity : collection) {
+            // Here you can remove entities from an external storage
+        }
     }
 }
